Change dodgy file urls to files that return urls -> SH